[package]
name = "cicadas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
reqwest = { version = "0.12.3", features = ["blocking"] }
thiserror = "1.0.58"
